--- a/index.html
+++ b/index.html
@@ -37,10 +37,45 @@
   <!-- Navbar -->
   <nav class="navbar navbar-default navbar-fixed-top animated-nav" role="navigation">
     <div class="container">
+      <div class="row">
+
+        <div class="col-xs-2 text-left navmodule">
+          <a href="http://facebook.com/hackpoly">
+            <i class="fb-link fa fa-facebook-square"> </i>
+          </a>
+          <a href="http://twitter.com/hackpoly">
+            <span class="twitter-link fa fa-twitter-square"> </span>
+          </a>
+        </div>
+
+        <div class="col-xs-8 text-center">
+          <div class="navbar-logo">
+           <img id="hpoly-logo" src="res/hackpoly.png" alt="cal poly pomona hackathon logo" /> 
+         </div>
+        </div>
+
+        <div class="col-xs-2 text-right navmodule">
+          <button class="btn btn-primary"> Apply </button>
+        </div>
+
+      </div>
+
+      <!-- <div class="navbar-left">
+        <a href="http://facebook.com/hackpoly">
+          <i class="fb-link fa fa-facebook-square"> </i>
+        </a>
+        <a href="http://twitter.com/hackpoly">
+          <span class="twitter-link fa fa-twitter-square"> </span>
+        </a>
+      </div>
 
       <div class="navbar-logo" href="#"> 
         <img id="hpoly-logo" src="res/hackpoly.png" alt="cal poly pomona hackathon logo" /> 
       </div>
+
+      <div class="navbar-right">
+        <button class="btn btn-primary"> Apply </button>
+      </div> -->
 
      <!--  <div class="navbuttons navbar-right">
           <button type="button" class="btn btn-default navbar-btn">Apply</button>
@@ -56,10 +91,30 @@
 
     <!-- Header Portion -->
     <div id="top-image" class="image-module">
+      <div class="container">
+        <div id="prenav" class="row">
 
-      <div id="prenav">
-        <img id="hpoly-logo" src="res/hackpoly-white.png" alt="cal poly pomona hackathon logo" /> 
+          <div class="col-xs-2 text-left navmodule">
+            <a href="http://facebook.com/hackpoly">
+              <i class="fb-link fa fa-facebook-square fa-inverse"> </i>
+            </a>
+            <a href="http://twitter.com/hackpoly">
+              <span class="twitter-link fa fa-twitter-square fa-inverse"> </span>
+            </a>
+          </div>
+
+          <div class="col-xs-8 text-center">
+            <div class="navbar-logo">
+             <img id="hpoly-logo-white" src="res/hackpoly-white.png" alt="cal poly pomona hackathon logo" /> 
+           </div>
+          </div>
+
+        </div>
       </div>
+
+    <!--   <div id="prenav">
+        
+      </div> -->
 
       <div class="hero-line">
         <h1> Hack at Cal Poly Pomona </h1>
@@ -186,18 +241,20 @@
           </div>
 
           <div class="block gold">
-            <a href="http://mlh.io">
-              <img id="mlh" title="Hackpoly part of the MLH.io Spring 2015 lineup" alt="Major League Hacking sponsors Hackpoly 2015" src="res/sponsors/mlh.png" />
-            </a>
+            
           </div>
 
           <div class="block silver">
+            <a href="http://mlh.io">
+              <img id="mlh" title="Hackpoly part of the MLH.io Spring 2015 lineup" alt="Major League Hacking sponsors Hackpoly 2015" src="res/sponsors/mlh.png" />
+            </a>
+
             <a href="http://generalassemb.ly">
               <img id="generalassembly" title="Hackpoly sponsored by General Assembly" alt="Hackpoly sponsored by General Assembly" src="res/sponsors/ga.png" />
             </a>
           </div>
 
-          <div class="blockbronze">
+          <div class="block bronze">
             <a href="http://food2fork.com">
               <img id="food2fork" title="Food2Fork sponsors Hackpoly" alt="Food2Fork sponsors Hackpoly" src="res/sponsors/food2fork.png" />
             </a>
@@ -240,60 +297,6 @@
 
   </div>
 
-    <!-- <div id="about" class="blur-module" data-blur-target="#top-image">
-      <div class="container">
-        <h2> Hackpoly is Cal Poly Pomona's Hackathon </h2>
-
-        <div class="row text-center">
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <h4> WHERE </h4> 
-            <a href = "http://maps.google.com/maps/api/staticmap?center=34.052142,-117.814411&zoom=13&markers=Cal+Poly+Pomona+3801+West+Temple+Avenue+Pomona,+CA+91768&path=color:0x0000FF80|weight:5|34.06061,-117.81652&size=500x300&sensor=TRUE_OR_FALSE">
-              Cal Poly Pomona <br />
-              Pomona, CA 91768
-            </a>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-             <h4> WHEN </h4>
-             <a target="_blank" href="https://www.google.com/calendar/event?action=TEMPLATE&tmeid=MHQzcWpjN3Y2ZDN2YTlpYWZzM2E5dGc0bXMgcWYxbHNlNXQwMjllaDdxMXQ3MWVwbWdqdDRAZw&tmsrc=qf1lse5t029eh7q1t71epmgjt4%40group.calendar.google.com">
-              Friday, Feb 20th 6 PM - <br />
-              Saturday, Feb 21st 10 PM
-             </a>
-          </div>
-        </div>
-        <div id="what">
-          <p>
-            Hackpoly is Cal Poly Pomona's event of the year for creativity, ingenuity, and technical talent. 
-          </p>
-        </div>
-
-      </div>
-
-    </div>
-
-    <div id="build" class="image-module">
-      <img src="res/solder.jpg" alt="Build the Future in Southern California" />
-
-      <div class="hero-line">
-        <h1> Hack at Cal Poly Pomona </h1>
-
-      </div>
-    </div>
-
-    <div id="faq" class="blur-module" data-blur-target="#build"> 
-
-    </div>
-  </div> -->
-
-  <!-- SVG Blur Fallback -->
-<!--   <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-    <defs>
-      <filter id="blur">
-        <feGaussianBlur stdDeviation="5" />
-      </filter>
-    </defs>
-  </svg> -->
-
   <!-- External Scripts -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
@@ -312,7 +315,7 @@
   <script>
     $(document).ready(function(){
       //When scrolling past the header text, bring in navbar
-      var $heroText = $(".hero-line").first();
+      var $button = $("#apply-button").first();
       var $nav = $(".navbar").first();
       var $prenav = $("#prenav").first();
 
@@ -320,21 +323,21 @@
       var oldHeight = $nav.height();
       var navVis = false;
       $(window).scroll(function(){
-        if($(document).scrollTop() > ($heroText.position().top-60)){
+        if($(document).scrollTop() > ($button.position().top)){
           if(!navVis){
            $nav.addClass('notransition');
            $nav.css('height',"20px");
            console.log(((oldHeight*1) + 50) + "px");
            console.log($nav.css('height'));
-           $nav.css('top',-1 * oldheight + "px")
+           //$nav.css('top',-1 * oldHeight + "px")
            $nav.removeClass('notransition');
 
            $nav.css('display','block');
            $nav.css('height',oldHeight);
-           $nav.css('top', "0px");
+           //$nav.css('top', "0px");
            $nav.css('opacity',1);
 
-           $prenav.css('display', 'none');
+           //$prenav.css('display', 'none');
 
            navVis = true;
           }
