--- a/index.html
+++ b/index.html
@@ -60,28 +60,6 @@
 
       </div>
 
-      <!-- <div class="navbar-left">
-        <a href="http://facebook.com/hackpoly">
-          <i class="fb-link fa fa-facebook-square"> </i>
-        </a>
-        <a href="http://twitter.com/hackpoly">
-          <span class="twitter-link fa fa-twitter-square"> </span>
-        </a>
-      </div>
-
-      <div class="navbar-logo" href="#"> 
-        <img id="hpoly-logo" src="res/hackpoly.png" alt="cal poly pomona hackathon logo" /> 
-      </div>
-
-      <div class="navbar-right">
-        <button class="btn btn-primary"> Apply </button>
-      </div> -->
-
-     <!--  <div class="navbuttons navbar-right">
-          <button type="button" class="btn btn-default navbar-btn">Apply</button>
-          <button type="button" class="btn btn-default navbar-btn">Sponsor</button>
-      </div> -->
-
     </div>
   </nav>
 
@@ -246,21 +224,21 @@
 
           <div class="block silver">
             <a href="http://mlh.io">
-              <img id="mlh" title="Hackpoly part of the MLH.io Spring 2015 lineup" alt="Major League Hacking sponsors Hackpoly 2015" src="res/sponsors/mlh.png" />
+              <img id="mlh" class="grayscale" title="Hackpoly part of the MLH.io Spring 2015 lineup" alt="Major League Hacking sponsors Hackpoly 2015" src="res/sponsors/mlh.png" />
             </a>
 
             <a href="http://generalassemb.ly">
-              <img id="generalassembly" title="Hackpoly sponsored by General Assembly" alt="Hackpoly sponsored by General Assembly" src="res/sponsors/ga.png" />
+              <img id="generalassembly" class="grayscale" title="Hackpoly sponsored by General Assembly" alt="Hackpoly sponsored by General Assembly" src="res/sponsors/ga.png" />
             </a>
           </div>
 
           <div class="block bronze">
             <a href="http://food2fork.com">
-              <img id="food2fork" title="Food2Fork sponsors Hackpoly" alt="Food2Fork sponsors Hackpoly" src="res/sponsors/food2fork.png" />
+              <img id="food2fork" class="grayscale" title="Food2Fork sponsors Hackpoly" alt="Food2Fork sponsors Hackpoly" src="res/sponsors/food2fork.png" />
             </a>
 
             <a href="http://jetbrains.com">
-              <img id="jetbrains" title="Jetbrains Sponsors Hackpoly" alt="Jetbrains Sponsors Hackpoly" src="res/sponsors/jetbrains.png" />
+              <img id="jetbrains" class="grayscale" title="Jetbrains Sponsors Hackpoly" alt="Jetbrains Sponsors Hackpoly" src="res/sponsors/jetbrains.png" />
             </a>
          </div>
 
