--- a/index.html
+++ b/index.html
@@ -81,13 +81,19 @@
 
           <li >
             <a href="http://facebook.com/hackpoly">
-              <i class="fb-link fa fa-facebook-square"></i> Facebook
+              <i class="share-link fa fa-facebook-square"></i> <span class="share-text">Facebook</span>
             </a>
           </li>
 
           <li >
             <a href="http://twitter.com/hackpoly">
-              <i class="twitter-link fa fa-twitter-square"></i> Twitter
+              <i class="share-link fa fa-twitter-square"></i> <span class="share-text">Twitter</span>
+            </a>
+          </li>
+
+          <li >
+            <a href="http://github.com/teamhackpoly">
+              <i class="share-link fa fa-github-square"></i> <span class="share-text">Source Code</span>
             </a>
           </li>
 
